DOCS-1354: Fixing suspicious domains title

--- a/calico-cloud/threat/suspicious-domains.mdx
+++ b/calico-cloud/threat/suspicious-domains.mdx
@@ -2,7 +2,7 @@
 description: Add threat intelligence feeds to trace DNS queries that involve suspicious domains.
 ---
 
-# Trace and block suspicious domains
+# Trace and alert on suspicious domains
 
 ## Big picture
 
