DOCS-1358: Adds prerequisits for SELinux-enabled systems

--- a/calico-enterprise/operations/logstorage/create-storage.mdx
+++ b/calico-enterprise/operations/logstorage/create-storage.mdx
@@ -64,6 +64,12 @@ volumeBindingMode: WaitForFirstConsumer
 reclaimPolicy: Retain
 ```
 
+:::note
+
+If local persistent volumes are provisioned on an SELinux-enabled host, you can use the `/mnt/tigera` host path created by the {{prodname}} policy package.
+
+:::
+
 #### AWS EBS disks
 
 In the following example for an AWS cloud provider integration, the **StorageClass** is based on [how your EBS disks are provisioned](https://docs.aws.amazon.com/eks/latest/userguide/ebs-csi.html):
