DOCS-1357: Restores SysReq prerequisite to RKE install procedure

--- a/calico-enterprise/getting-started/install-on-clusters/gke.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/gke.mdx
@@ -45,7 +45,7 @@ The geeky details of what you get:
 
   :::
 
-- Cluster meets [system requirements](requirements.mdx#network-requirements)
+- Cluster meets [system requirements](requirements.mdx)
 
 - A [Tigera license key and credentials](calico-enterprise.mdx#get-private-registry-credentials-and-license-key)
 
