--- a/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/rancher.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/rancher.mdx
@@ -33,7 +33,7 @@ The geeky details of what you get:
 
   - Configure your cluster with a [Cluster Config File](https://rancher.com/docs/rancher/v2.x/en/cluster-provisioning/rke-clusters/options/#cluster-config-file) and specify [no network plugin](https://rancher.com/docs/rke/latest/en/config-options/add-ons/network-plugins/) by setting `plugin: none` under `network` in your configuration file.
 
-- RKE cluster meets the [{{prodname}} requirements](requirements.mdx)
+- Cluster meets [system requirements](requirements.mdx)
 
 - [Credentials for the Tigera private registry and a license key](calico-enterprise.mdx).
 
