--- a/calico-enterprise_versioned_docs/version-3.16/getting-started/install-on-clusters/rancher.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/getting-started/install-on-clusters/rancher.mdx
@@ -37,6 +37,8 @@ The geeky details of what you get:
 
   :::
 
+- Cluster meets [system requirements](requirements.mdx)
+
 - A [Tigera license key and credentials](calico-enterprise.mdx).
 
 - A `kubectl` environment with access to your cluster
