--- a/calico-enterprise/operations/clis/calicoctl/install.mdx
+++ b/calico-enterprise/operations/clis/calicoctl/install.mdx
@@ -54,7 +54,7 @@ Consider navigating to a location that's in your `PATH`. For example, `/usr/loca
 
 Use the following command to download the `calicoctl` binary.
 
-<CodeBlock language='batch'>
+<CodeBlock language='bash'>
   {'{{version}}' === 'master'
     ? `curl -o calicoctl -O -L {{filesUrl}}/download/binaries/${version}/calicoctl`
     : `curl -o calicoctl -O -L {{downloadsurl}}/ee/binaries/${version}/calicoctl`}
@@ -85,7 +85,7 @@ Consider navigating to a location that's in your `PATH`. For example, `/usr/loca
 
 Use the following command to download the `calicoctl` binary.
 
-<CodeBlock language='batch'>
+<CodeBlock language='bash'>
   {'{{version}}' === 'master'
     ? `curl -o calicoctl -O -L {{filesUrl}}/download/binaries/${version}/calicoctl-darwin-amd64`
     : `curl -o calicoctl -O -L {{downloadsurl}}/ee/binaries/${version}/calicoctl-darwin-amd64`}
@@ -121,7 +121,7 @@ to a location that's in your `PATH`. For example, `C:\Windows`.
 
 :::
 
-<CodeBlock language='batch'>
+<CodeBlock language='bash'>
   {'{{version}}' === 'master'
     ? `Invoke-WebRequest -Uri "{{filesUrl}}/download/binaries/${version}/calicoctl-windows-amd64.exe" -OutFile "calicocttl.exe"`
     : `Invoke-WebRequest -Uri "{{downloadsurl}}/ee/binaries/${version}/calicoctl-windows-amd64.exe" -OutFile "calicocttl.exe"`}
@@ -145,7 +145,7 @@ Consider navigating to a location that's in your `PATH`. For example, `/usr/loca
 
 Use the following command to download the `calicoctl` binary.
 
-<CodeBlock language='batch'>
+<CodeBlock language='bash'>
   {'{{version}}' === 'master'
     ? `curl -o kubectl-calico -O -L {{filesUrl}}/download/binaries/${version}/calicoctl`
     : `curl -o kubectl-calico -O -L {{downloadsurl}}/ee/binaries/${version}/calicoctl`}
@@ -176,7 +176,7 @@ Consider navigating to a location that's in your `PATH`. For example, `/usr/loca
 
 Use the following command to download the `calicoctl` binary.
 
-<CodeBlock language='batch'>
+<CodeBlock language='bash'>
   {'{{version}}' === 'master'
     ? `curl -o kubectl-calico -O -L {{filesUrl}}/download/binaries/${version}/calicoctl-darwin-amd64`
     : `curl -o kubectl-calico -O -L {{downloadsurl}}/ee/binaries/${version}/calicoctl-darwin-amd64`}
@@ -212,7 +212,7 @@ to a location that's in your `PATH`. For example, `C:\Windows`.
 
 :::
 
-<CodeBlock language='batch'>
+<CodeBlock language='bash'>
   {'{{version}}' === 'master'
     ? `Invoke-WebRequest -Uri "{{filesUrl}}/download/binaries/${version}/calicoctl-windows-amd64.exe" -OutFile "kubectl-calico.exe"`
     : `Invoke-WebRequest -Uri "{{downloadsurl}}/ee/binaries/${version}/calicoctl-windows-amd64.exe" -OutFile "kubectl-calico.exe"`}
