--- a/calico-enterprise_versioned_docs/version-3.16/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee/helm.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee/helm.mdx
@@ -26,7 +26,7 @@ The following steps assume the Calico deployment is installed on `tigera-operato
 
 1. Get the Helm chart
 
-   <CodeBlock language='batch'>
+   <CodeBlock language='bash'>
      {'{{version}}' === 'master'
        ? 'gsutil cp gs://tigera-helm-charts/tigera-operator-v0.0.tgz'
        : 'curl -O -L {{downloadsurl}}/ee/charts/tigera-operator-{{chart_version_name}}.tgz'}
@@ -44,7 +44,7 @@ The following steps assume the Calico deployment is installed on `tigera-operato
 
 1. Run the Helm upgrade command for `tigera-operator`
 
-   <CodeBlock language='batch'>
+   <CodeBlock language='bash'>
      {'{{version}}' === 'master'
        ? `helm upgrade calico-enterprise tigera-operator-v0.0.tgz \\
 --set-file imagePullSecrets.tigera-pull-secret=<path/to/pull/secret>,tigera-prometheus-operator.imagePullSecrets.tigera-pull-secret=<path/to/pull/secret> \\
