--- a/calico-cloud_versioned_docs/version-3.15/operations/cluster-management.mdx
+++ b/calico-cloud_versioned_docs/version-3.15/operations/cluster-management.mdx
@@ -16,15 +16,16 @@ If you inadvertenty delete a managed cluster, rerun the `curl` command and the c
 
 ### Access your managed clusters
 
-Each time you install {{prodname}} on a cluster, the cluster is added to the drop-down menu in Manager.
+Each time you install {{prodname}} on a cluster, the cluster is added to the drop-down menu in Manager UI.
 
 ![cluster-menu](/img/calico-cloud/cluster-menu.png)
 
-Use this menu to move between your managed clusters. You can create as many managed clusters as your subscriptions allows.
+Use this menu to move between your clusters.You can connect as many managed clusters as your subscriptions allows
 
 ### Managed cluster views
 
-Each time you change to a different cluster, the entire Manager "view" is set for the cluster you've selected. For example, each managed cluster has unique indexes for Elasticsearch clusters, a separate instance of Kibana, and the dashboard reflects only the selected managed cluster.
+When you select a different cluster from the cluster menu, the entire Manager UI view changes to reflect the selected cluster.
+For example, each managed cluster has unique indexes for Elasticsearch clusters, a separate instance of Kibana, and the dashboard reflects only the selected managed cluster.
 
 ### Manage policies in multiple clusters
 
