--- a/calico-cloud_versioned_docs/version-3.15/get-started/connect/connect-cluster.mdx
+++ b/calico-cloud_versioned_docs/version-3.15/get-started/connect/connect-cluster.mdx
@@ -17,7 +17,7 @@ Although connecting your cluster to {{prodname}} is easy, we also understand you
 
 After your cluster is connected, it is listed in the Managed Clusters page where you can move between multiple clusters.
 
-![connect-disconnect](/img/calico-cloud/connect-disconnect.png)
+![managed-clusters](/img/calico-cloud/managed-clusters.png)
 
 ## What happens when you disconnect your cluster
 
