--- a/calico-cloud_versioned_docs/version-3.15/threat/suspicious-domains.mdx
+++ b/calico-cloud_versioned_docs/version-3.15/threat/suspicious-domains.mdx
@@ -20,9 +20,7 @@ This how-to guide uses the following {{prodname}} features:
 
 ## Concepts
 
-### Pull or push threat feeds?
-
-{{prodname}} supports both push and pull methods for updating threat feeds. Use the **pull method** for fully automated threat feed updates without user intervention. Use the **push method** to schedule your own updates or if your threat feed is not available over HTTP(S).
+{{prodname}} supports pull methods for updating threat feeds. Use this method for fully automated threat feed updates without user intervention. 
 
 ### Domain name threat feeds
 
@@ -44,10 +42,8 @@ We recommend that you turn down the aggregation of DNS logs sent to Elasticsearc
 
 ## How to
 
-This section describes how to pull or push threat feeds to {{prodname}}.
+This section describes how to pull threat feeds to {{prodname}}.
 
-- [Pull threat feed updates](#pull-threat-feed-updates)
-- [Push threat feed updates](#push-threat-feed-updates)
 
 ### Pull threat feed updates
 
@@ -63,7 +59,7 @@ To add threat feeds to {{prodname}} for automatic updates (default is once a day
    - **Content type**: DomainNameSet
    - **Labels**: Choose a label from the list.
 3. Click **Save Changes**.
-   <br />
+   
    From the **Action** menu, you can view or edit the details that you entered and can download the manifest file.
 
 > Go to the Alerts page to view events that are generated when an endpoint in the cluster queries a name on the list. For more information, see [Manage alerts](../visibility/alerts.mdx).
@@ -95,45 +91,6 @@ To add threat feeds to {{prodname}} for automatic updates (default is once a day
    ```
 
 > Go to the Alerts page to view events that are generated when an endpoint in the cluster queries a name on the list. For more information, see [Manage alerts](../visibility/alerts.mdx).
-
-### Push threat feed updates
-
-Use the push method if your threat feeds that are not in newline-delimited format, not available over HTTP, or if you prefer to push updates as they become available.
-
-1. Create the GlobalThreatFeed YAML and save it to file.
-   Replace the **name** field with your own name. The name is important in the later steps so make note of it.
-
-   ```yaml
-   apiVersion: projectcalico.org/v3
-   kind: GlobalThreatFeed
-   metadata:
-     name: my-threat-feed
-   spec:
-     content: DomainNameSet
-     mode: Enabled
-     description: 'This is my threat feed'
-     feedType: Custom
-   ```
-
-2. Add the global threat feed to the cluster.
-
-   ```shell
-   kubectl apply -f <your_threatfeed_filename>
-   ```
-
-3. Configure or program your threat feed to write updates to Elasticsearch. This Elasticsearch document is in the index **.tigera.domainnameset.\<cluster_name\>** and must have the ID set to the name of the global threat feed object. The doc should have a single field called **domains**, containing a list of domain names. For example:
-
-   ```
-   PUT .tigera.domainnameset.cluster/_doc/my-threat-feed
-   {
-       "domains" : ["malicious.badstuff", "hacks.r.us"]
-   }
-   ```
-
-   Note that in order to push data to ES, you'll need to configure a policy that allows that information to reach the ES cluster.
-   See the Elasticsearch document APIs for how to create and update documents in Elasticsearch.
-
-4. In {{prodname}} Manager, go the “Alerts” page to view events that are generated when an endpoint in the cluster queries a name on the list.
 
 ## Above and beyond
 
