Docs changes to use kubectl/calicoctl for kdd,etcd mode

--- a/calico-cloud/networking/configuring/bgp.mdx
+++ b/calico-cloud/networking/configuring/bgp.mdx
@@ -124,13 +124,13 @@ spec:
 
 To configure a node to be a route reflector with cluster ID 244.0.0.1, run the following command.
 
-```
-calicoctl patch node my-node -p '{"spec": {"bgp": {"routeReflectorClusterID": "244.0.0.1"}}}'
+```bash
+kubectl annotate node my-node projectcalico.org/RouteReflectorClusterID=244.0.0.1
 ```
 
 Typically, you will want to label this node to indicate that it is a route reflector, allowing it to be easily selected by a BGPPeer resource. You can do this with kubectl. For example:
 
-```
+```bash
 kubectl label node my-node route-reflector=true
 ```
 
@@ -162,7 +162,7 @@ The default **node-to-node BGP mesh** may be turned off to enable other BGP topo
 
 Run the following command to disable the BGP full-mesh:
 
-```
+```bash
 calicoctl patch bgpconfiguration default -p '{"spec": {"nodeToNodeMeshEnabled": false}}'
 ```
 
@@ -221,7 +221,7 @@ You can use `calicoctl` to view the BGP information for all peers of a particula
 
 Run the following command from anywhere you have access to `kubectl`:
 
-```
+```bash
 calicoctl bgp peers <NODE_NAME>
 ```
 
@@ -236,7 +236,7 @@ The above command can be run from anywhere you have access to kubectl. We recomm
 
 If you install the binary as a kubectl plugin using the above instructions, you can then run the command as follows:
 
-```
+```bash
 kubectl calico bgp peers <NODE_NAME>
 ```
 
@@ -244,7 +244,7 @@ kubectl calico bgp peers <NODE_NAME>
 
 By default, all Calico nodes use the 64512 autonomous system, unless a per-node AS has been specified for the node. You can change the global default for all nodes by modifying the default **BGPConfiguration** resource. The following example command sets the global default AS number to **64513**.
 
-```
+```bash
 kubectl patch bgpconfiguration default -p '{"spec": {"asNumber": "64513"}}'
 ```
 
@@ -258,7 +258,7 @@ If the default BGP configuration resource does not exist, you need to create it 
 
 You can configure an AS for a particular node by modifying the node object using `calicoctl`. For example, the following command changes the node named **node-1** to belong to **AS 64514**.
 
-```
+```bash
 calicoctl patch node node-1 -p '{"spec": {"bgp": {"asNumber": "64514"}}}'
 ```
 
