Mention ordering with Kubernetes NetworkPolicies
Source: https://stackoverflow.com/a/68134768/711380

--- a/calico_versioned_docs/version-3.25/network-policy/get-started/calico-policy/calico-network-policy.mdx
+++ b/calico_versioned_docs/version-3.25/network-policy/get-started/calico-policy/calico-network-policy.mdx
@@ -217,7 +217,7 @@ spec:
 
 ### Apply network policies in specific order
 
-To control the order/sequence of applying network policies, you can use the **order** field (with precedence from the lowest value to highest). Defining policy **order** is important when you include both **action: allow** and **action: deny** rules that may apply to the same endpoint.
+To control the order/sequence of applying network policies, you can use the **order** field (with precedence from the lowest value to highest). Defining policy **order** is important when you include both **action: allow** and **action: deny** rules that may apply to the same endpoint. Because Kubernetes NetworkPolicy don't have an explicit order field, they are treated as though they had an implicit order of 1000.
 
 In the following example, the policy **allow-cluster-internal-ingress** (order: 10) will be applied before the **policy drop-other-ingress** (order: 20).
 
