doc: VXLAN in IPv6 is only supported for kernel versions >=4.19.1 or redhat kernel version >= 4.18.0
Signed-off-by: blue-troy <12729455+blue-troy@users.noreply.github.com>

--- a/calico/networking/configuring/vxlan-ipip.mdx
+++ b/calico/networking/configuring/vxlan-ipip.mdx
@@ -49,7 +49,7 @@ Encapsulation of workload traffic is typically required only when traffic crosse
 **Limitations**
 
 - IP in IP supports only IPv4 addresses
-- VXLAN in IPv6 is only supported for kernel versions >= 3.12
+- VXLAN in IPv6 is only supported for kernel versions >=4.19.1 or redhat kernel version >= 4.18.0
 
 ## How to
 
