DOCS-1364: Fixes bad titles and missing page in calicotcl ipam docs

--- a/calico/reference/calicoctl/ipam/configure.mdx
+++ b/calico/reference/calicoctl/ipam/configure.mdx
@@ -2,7 +2,7 @@
 description: Command to change IPAM configuration.
 ---
 
-# calicoctl ipam
+# calicoctl ipam configure
 
 This section describes the `calicoctl ipam configure` command.
 
