--- a/calico/reference/calicoctl/ipam/show.mdx
+++ b/calico/reference/calicoctl/ipam/show.mdx
@@ -2,7 +2,7 @@
 description: Command to see if IP address is being used.
 ---
 
-# calicoctl ipam
+# calicoctl ipam show
 
 This section describes the `calicoctl ipam show` command.
 
