--- a/calico_versioned_docs/version-3.24/reference/calicoctl/ipam/release.mdx
+++ b/calico_versioned_docs/version-3.24/reference/calicoctl/ipam/release.mdx
@@ -2,7 +2,7 @@
 description: Command to release an IP address from Calico IP management.
 ---
 
-# calicoctl ipam
+# calicoctl ipam release
 
 This section describes the `calicoctl ipam release` command.
 
