--- a/calico_versioned_docs/version-3.25/reference/calicoctl/ipam/configure.mdx
+++ b/calico_versioned_docs/version-3.25/reference/calicoctl/ipam/configure.mdx
@@ -2,7 +2,7 @@
 description: Command to change IPAM configuration.
 ---
 
-# calicoctl ipam
+# calicoctl ipam configure
 
 This section describes the `calicoctl ipam configure` command.
 
