Adds updated helm chart location

--- a/calico_versioned_docs/version-3.24/getting-started/kubernetes/managed-public-cloud/eks.mdx
+++ b/calico_versioned_docs/version-3.24/getting-started/kubernetes/managed-public-cloud/eks.mdx
@@ -127,7 +127,7 @@ Before you get started, make sure you have downloaded and configured the [necess
 1. Add {{prodname}} into your Helm repository.
 
     ```batch
-    helm repo add projectcalico https://docs.projectcalico.org/charts
+    helm repo add projectcalico https://docs.tigera.io/calico/charts
     ```
 
 1. If {{prodname}} is already added, update it to get the latest released version.
