adding note for l7 log generation for persistent connections

--- a/calico-enterprise_versioned_docs/version-3.16/visibility/elastic/l7/configure.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/visibility/elastic/l7/configure.mdx
@@ -111,6 +111,10 @@ In this step, you will configure L7 logs, select logs for collection, and test t
    kubectl annotate svc <service-name> -n <service-namespace> projectcalico.org/l7-logging-
    ```
 
+After annotating a service for L7 log collection, only newly-established connections through that service are proxied by Envoy. Connections established before the service is annotated are not proxied or interrupted, and no logs are generated.
+
+Conversely, when a service is deselected, any previous connections established through the annotated service continue to be proxied by Envoy until they are terminated, and logs are generated.
+
 **Test your configuration**
 
 1. Identify the path to access your cluster. Where <path\> can be:
