--- a/calico-enterprise_versioned_docs/version-3.14/visibility/elastic/l7/configure.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/visibility/elastic/l7/configure.mdx
@@ -107,6 +107,10 @@ In this step, you configure ApplicationLayer resource to gather the L7 logs.
    kubectl annotate svc <service-name> -n <service-namespace> projectcalico.org/l7-logging-
    ```
 
+After annotating a service for L7 log collection, only newly-established connections through that service are proxied by Envoy. Connections established before the service is annotated are not proxied or interrupted, and no logs are generated.
+
+Conversely, when a service is deselected, any previous connections established through the annotated service continue to be proxied by Envoy until they are terminated, and logs are generated.
+
 **Step 3: Test your configuration**
 
 To test your installation, you must first know the appropriate path to access your cluster.
