adding l7 note to cc

--- a/calico-enterprise_versioned_docs/version-3.14/visibility/elastic/l7/configure.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/visibility/elastic/l7/configure.mdx
@@ -119,7 +119,7 @@ The path can be either of the following:
 - The public address of your cluster/service
 - The cluster IP of your application's service (if testing within the cluster)
 
-After identifying the path, `curl` your service with a command similar to the following:
+After identifying the path, `curl` your service with a command similar to the following. You will see `Server` header as `envoy`.
 
 ```
 curl --head <path to access service>:<optional port>/<path>
