--- a/calico-enterprise_versioned_docs/version-3.16/visibility/elastic/l7/configure.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/visibility/elastic/l7/configure.mdx
@@ -123,7 +123,7 @@ Conversely, when a service is deselected, any previous connections established t
      or
    - Cluster IP of your application's service (if testing within the cluster)
 
-1. `curl` your service with a command similar to the following:
+1. `curl` your service with a command similar to the following. You will see `Server` header as `envoy`.
 
    ```bash
    curl --head <path to access service>:<optional port>/<path>
