Add documentation for enabling / configuring the runtime view
This PR separates out the details of the runtime view into it's own document, and does a more comprehensive overview of what it does, how you enable it, and how it needs to be configured in special cases.

It outlines pre requisites around requiring k8s clusters that use CRI, and highlights what components are installed and what privileges they need.

--- a/calico-cloud/image-assurance/scan-image-registries.mdx
+++ b/calico-cloud/image-assurance/scan-image-registries.mdx
@@ -222,6 +222,8 @@ In the Scan Results and Runtime tabs, the **Registry path** field may be blank i
 
 :::
 
+For information configuring the Runtime View please see [Configuring the Runtime View](configuring-the-runtime-view.mdx)
+
 **How Pass, Warn, and Fail scores map to CVSS scores**
 
 {{prodname}} image scoring is based on the Common Vulnerability Scoring System v3 (CVSS Scores).
