DOCS-1359: Updates images and text for new managed clusters view

--- a/calico-cloud_versioned_docs/version-3.16/get-started/connect/connect-cluster.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/get-started/connect/connect-cluster.mdx
@@ -17,7 +17,7 @@ Although connecting your cluster to {{prodname}} is easy, we also understand you
 
 After your cluster is connected, it is listed in the Managed Clusters page where you can move between multiple clusters.
 
-![connect-disconnect](/img/calico-cloud/connect-disconnect.png)
+![managed-clusters](/img/calico-cloud/managed-clusters.png)
 
 ## What happens when you disconnect your cluster
 
@@ -44,14 +44,14 @@ For details of the migration script, see [Uninstall {{prodname}} from a cluster]
 - Pushes a license to the cluster so components receive appropriate entitlements
 - Adds custom namespaces, service account, and role bindings to support cluster access and permissions to the {{prodname}} user interface
 - Creates RBAC permissions to access these resources:
-  - Number of nodes in the cluster and stats for billing purposes
-  - Policies in the cluster, and pod information
+- Number of nodes in the cluster and stats for billing purposes
+- Policies in the cluster, and pod information
 - Registers the cluster so it can connect to {{prodname}}
 - Creates a tier with a global threat feed to deny egress traffic to addresses in the threat feed
 - Adds policies to secure communication for {{prodname}} components, including safeguards that prevent any new network policies from impacting the vital functions of the cluster
 - Creates roles and bindings for two user types for access to Manager UI:
-  - **Admin** - full permissions for network policies and {{prodname}} resources, and read permissions for namespace and pods
-  - **User** - read-only/view permissions to same resources above
+- **Admin** - full permissions for network policies and {{prodname}} resources, and read permissions for namespace and pods
+- **User** - read-only/view permissions to same resources above
 
 ## How long does it take to connect a cluster?
 
