Validating yaml code blocks
Yaml validation fixes

--- a/calico-cloud/multicluster/kubeconfig.mdx
+++ b/calico-cloud/multicluster/kubeconfig.mdx
@@ -357,7 +357,7 @@ For policy rule selectors on the local cluster to correctly reference endpoints 
 
 To verify that remote clusters are accessible, use the following command.
 
-```
+```bash
 $ calicoq eval "all()"
 ```
 
