--- a/calico-cloud_versioned_docs/version-3.15/network-policy/policy-tiers/rbac-tiered-policies.mdx
+++ b/calico-cloud_versioned_docs/version-3.15/network-policy/policy-tiers/rbac-tiered-policies.mdx
@@ -217,7 +217,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: tigera-example-get-default-tier
 rules:
- To access Calico policy in a tier, the user requires "get" access to that tier.
+ # To access Calico policy in a tier, the user requires "get" access to that tier.
 - apiGroups: ["projectcalico.org"]
   resources: ["tiers"]
   resourceNames: ["default"]
@@ -230,7 +230,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: tigera-example-read-policies-in-default-tier
 rules:
- This allows "get" and "list" of the Calico NetworkPolicy resources in the default tier.
+ # This allows "get" and "list" of the Calico NetworkPolicy resources in the default tier.
 - apiGroups: ["projectcalico.org"]
   resources: ["tier.networkpolicies"]
   resourceNames: ["default.*"]
@@ -238,7 +238,7 @@ rules:
 
 ---
 
- tigera-example-get-default-tier is applied globally
+# tigera-example-get-default-tier is applied globally
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
@@ -254,7 +254,7 @@ roleRef:
 
 ---
 
- tigera-example-read-policies-in-default-tier is applied per-namespace
+# tigera-example-read-policies-in-default-tier is applied per-namespace
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
@@ -321,7 +321,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: tigera-example-get-net-sec-tier
 rules:
- To access Calico policy in a tier, the user requires "get" access to that tier.
+ # To access Calico policy in a tier, the user requires "get" access to that tier.
 - apiGroups: ["projectcalico.org"]
   resources: ["tiers"]
   resourceNames: ["net-sec"]
@@ -334,7 +334,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: tigera-example-read-policies-in-net-sec-tier
 rules:
- This allows "get" and "list" of the Calico NetworkPolicy resources in the net-sec tier.
+ # This allows "get" and "list" of the Calico NetworkPolicy resources in the net-sec tier.
 - apiGroups: ["projectcalico.org"]
   resources: ["tier.networkpolicies"]
   resourceNames: ["net-sec.*"]
@@ -342,7 +342,7 @@ rules:
 
 ---
 
- tigera-example-get-net-sec-tier is applied globally
+# tigera-example-get-net-sec-tier is applied globally
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
@@ -358,7 +358,7 @@ roleRef:
 
 ---
 
- tigera-example-read-policies-in-net-sec-tier is applied per-namespace
+# tigera-example-read-policies-in-net-sec-tier is applied per-namespace
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
@@ -386,7 +386,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: tigera-example-make-net-sec-tier-visible
 rules:
- To access Calico policy in a tier, the user requires "get" access to that tier.
+ # To access Calico policy in a tier, the user requires "get" access to that tier.
 - apiGroups: ["projectcalico.org"]
   resources: ["tiers"]
   resourceNames: ["net-sec"]
@@ -394,7 +394,7 @@ rules:
 
 ---
 
- tigera-example-make-net-sec-tier-visible is applied globally
+# tigera-example-make-net-sec-tier-visible is applied globally
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
@@ -419,25 +419,25 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: tigera-example-all-tiers-and-namespaces-policy-reader
 rules:
- To access Calico policy in a tier, the user requires "get" access to that tier.
+ # To access Calico policy in a tier, the user requires "get" access to that tier.
  Not specifying any specific "resourceNames" provides access to all tiers.
 - apiGroups: ["projectcalico.org"]
   resources: ["tiers"]
   verbs: ["get"]
- This allows read access to the Kubernetes NetworkPolicy resources (these are always in the default tier).
+ # This allows read access to the Kubernetes NetworkPolicy resources (these are always in the default tier).
 - apiGroups: ["networking.k8s.io", "extensions"]
   resources: ["networkpolicies"]
   verbs: ["get","watch","list"]
- This allows read access to the Calico NetworkPolicy and GlobalNetworkPolicies.
- Not specifying any specific "resourceNames" provides access to them in all tiers.
+ # This allows read access to the Calico NetworkPolicy and GlobalNetworkPolicies.
+ # Not specifying any specific "resourceNames" provides access to them in all tiers.
 - apiGroups: ["projectcalico.org"]
   resources: ["tier.networkpolicies","tier.globalnetworkpolicies"]
   verbs: ["get","watch","list"]
 
 ---
 
- tigera-example-all-tiers-and-namespaces-policy-reader is applied globally, with a single ClusterRoleBinding,
- since all the rules it contains apply to all current and future namespaces on the cluster.
+# tigera-example-all-tiers-and-namespaces-policy-reader is applied globally, with a single ClusterRoleBinding,
+# since all the rules it contains apply to all current and future namespaces on the cluster.
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
@@ -471,7 +471,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: tigera-example-get-net-sec-tier
 rules:
- To access Calico policy in a tier, the user requires "get" access to that tier.
+ # To access Calico policy in a tier, the user requires "get" access to that tier.
 - apiGroups: ["projectcalico.org"]
   resources: ["tiers"]
   resourceNames: ["net-sec"]
@@ -484,7 +484,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: tigera-example-crud-policies-in-net-sec-tier
 rules:
- This allows full CRUD access to the Calico NetworkPolicy resources in the net-sec tier.
+# This allows full CRUD access to the Calico NetworkPolicy resources in the net-sec tier.
 - apiGroups: ["projectcalico.org"]
   resources: ["tier.networkpolicies"]
   resourceNames: ["net-sec.*"]
@@ -492,7 +492,7 @@ rules:
 
 ---
 
- tigera-example-get-net-sec-tier is applied globally
+# tigera-example-get-net-sec-tier is applied globally
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
@@ -508,7 +508,7 @@ roleRef:
 
 ---
 
- tigera-example-crud-policies-in-net-sec-tier is applied per-namespace
+# tigera-example-crud-policies-in-net-sec-tier is applied per-namespace
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
