--- a/calico-enterprise/operations/monitor/prometheus/configure-prometheus.mdx
+++ b/calico-enterprise/operations/monitor/prometheus/configure-prometheus.mdx
@@ -11,13 +11,13 @@ The process of updating rules is the same as for user created rules (documented 
 
 - Save the current alert rule:
 
-  ```
+  ```bash
   kubectl -n tigera-prometheus get prometheusrule -o yaml > calico-prometheus-alert-rule-dp.yaml
   ```
 
 - Make necessary edits to the alerting rules then apply the updated manifest.
 
-  ```
+  ```bash
   kubectl apply -f calico-prometheus-alert-rule-dp.yaml
   ```
 
@@ -162,7 +162,7 @@ spec:
 
 Then create/apply this manifest in kubernetes.
 
-```
+```bash
 kubectl apply -f tigera-peer-status-not-established.yaml
 ```
 
@@ -342,14 +342,14 @@ the ServiceMonitor manifest. To change the interval:
 
 - Save the current ServiceMonitor manifest:
 
-  ```
+  ```bash
   kubectl -n tigera-prometheus get servicemonitor calico-node-monitor -o yaml > calico-node-monitor.yaml
   ```
 
 - Update the `interval` field under `endpoints` to desired settings and
   apply the updated manifest.
 
-  ```
+  ```bash
   kubectl apply -f calico-node-monitor.yaml
   ```
 
@@ -409,13 +409,13 @@ Check config reloader logs to see if they detected any recent activity.
 
 - For prometheus run:
 
-  ```
+  ```bash
   kubectl -n tigera-prometheus logs prometheus-<your-prometheus-name> prometheus-config-reloader
   ```
 
 - For alertmanager run:
 
-  ```
+  ```bash
   kubectl -n tigera-prometheus logs alertmanager-<your-prometheus-name> config-reloader
   ```
 
