--- a/calico-enterprise_versioned_docs/version-3.14/operations/monitor/prometheus/configure-prometheus.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/operations/monitor/prometheus/configure-prometheus.mdx
@@ -11,13 +11,13 @@ The process of updating rules is the same as for user created rules (documented 
 
 - Save the current alert rule:
 
-  ```
+  ```bash
   kubectl -n tigera-prometheus get prometheusrule -o yaml > calico-prometheus-alert-rule-dp.yaml
   ```
 
 - Make necessary edits to the alerting rules then apply the updated manifest.
 
-  ```
+  ```bash
   kubectl apply -f calico-prometheus-alert-rule-dp.yaml
   ```
 
