--- a/calico-enterprise_versioned_docs/version-3.15/networking/ipam/change-block-size.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/networking/ipam/change-block-size.mdx
@@ -226,7 +226,7 @@ kubectl apply -f pool.yaml
 
 ### Disable the temporary IP pool
 
-```
+```bash
 kubectl patch ippool temporary-pool -p '{"spec": {"disabled": "true"}}'
 ```
 
@@ -234,7 +234,7 @@ kubectl patch ippool temporary-pool -p '{"spec": {"disabled": "true"}}'
 
 In our example, **coredns** is our only pod; for multiple pods you would trigger a deletion for all pods in the cluster.
 
-```
+```bash
 kubectl delete pod -n kube-system coredns-6f4fd4bdf-8q7zp
 ```
 
@@ -246,13 +246,13 @@ The following command is disruptive and may take several minutes depending on th
 
 :::
 
-```
+```bash
 kubectl delete pod -A --all
 ```
 
 Validate your pods and block size are correct by running the following commands:
 
-```
+```bash
 kubectl get pods --all-namespaces -o wide
 calicoctl ipam show --show-blocks
 ```
@@ -261,6 +261,6 @@ calicoctl ipam show --show-blocks
 
 Clean up the IP pools by deleting the temporary IP pool.
 
-```
+```bash
 kubectl delete pool temporary-pool
 ```
