--- a/calico-enterprise_versioned_docs/version-3.15/visibility/elastic/archive-storage.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/visibility/elastic/archive-storage.mdx
@@ -33,7 +33,7 @@ This how-to guide uses the following {{prodname}} features:
 2. Create a Secret in the `tigera-operator` namespace named `log-collector-s3-credentials` with the fields `key-id` and `key-secret`.
    Example:
 
-   ```
+   ```bash
     kubectl create secret generic log-collector-s3-credentials \
     --from-literal=key-id=<AWS-access-key-id> \
     --from-literal=key-secret=<AWS-secret-key> \
@@ -167,7 +167,7 @@ In this release, only [Splunk Enterprise](https://www.splunk.com/en_us/download/
 2. Create a Secret in the `tigera-operator` namespace named `logcollector-splunk-credentials` with the field `token`.
    Example:
 
-   ```
+   ```bash
     kubectl create secret generic logcollector-splunk-credentials \
     --from-literal=token=<splunk-hec-token> \
     -n tigera-operator
