--- a/calico/operations/image-options/imageset.mdx
+++ b/calico/operations/image-options/imageset.mdx
@@ -217,7 +217,7 @@ Apply the created `imageset.yaml` to your cluster.
 3. Verify that the correct ImageSet is being used. In Installation status, check that the `imageset` field is set to the ImageSet you created.
    Check the field by running the following command:
 
-   ```
+   ```bash
    kubectl get installation default -o yaml | grep imageSet
    ```
 
