--- a/calico-enterprise/networking/ipam/change-block-size.mdx
+++ b/calico-enterprise/networking/ipam/change-block-size.mdx
@@ -137,13 +137,13 @@ spec:
 
 Apply the changes.
 
-```
+```bash
 kubectl apply -f temporary-pool.yaml
 ```
 
 Let’s verify the temporary IP pool.
 
-```
+```bash
 calicoctl get ippool -o wide
 ```
 
@@ -157,13 +157,13 @@ temporary-pool        10.0.0.0/16      true   Always     false
 
 Disable allocations in the default pool.
 
-```
+```bash
 kubectl patch ippool default-ipv4-ippool -p '{"spec": {"disabled": "true"}}'
 ```
 
 Verify the changes.
 
-```
+```bash
 calicoctl get ippool -o wide
 ```
 
@@ -177,7 +177,7 @@ temporary-pool        10.0.0.0/16      true   Always     false
 
 In our example, **coredns** is our only pod; for multiple pods you would trigger a deletion for all pods in the cluster.
 
-```
+```bash
 kubectl delete pod -n kube-system coredns-6f4fd4bdf-8q7zp
 ```
 
@@ -189,7 +189,7 @@ The following command is disruptive and may take several minutes depending on th
 
 :::
 
-```
+```bash
 kubectl delete pod -A --all
 ```
 
@@ -197,7 +197,7 @@ kubectl delete pod -A --all
 
 Now that you’ve verified that pods are getting IPs from the new range, you can safely delete the existing pool.
 
-```
+```bash
 kubectl delete ippool default-ipv4-ippool
 ```
 
@@ -219,13 +219,13 @@ spec:
 
 Apply the changes.
 
-```
+```bash
 kubectl apply -f pool.yaml
 ```
 
 ### Disable the temporary IP pool
 
-```
+```bash
 kubectl patch ippool temporary-pool -p '{"spec": {"disabled": "true"}}'
 ```
 
@@ -233,7 +233,7 @@ kubectl patch ippool temporary-pool -p '{"spec": {"disabled": "true"}}'
 
 In our example, **coredns** is our only pod; for multiple pods you would trigger a deletion for all pods in the cluster.
 
-```
+```bash
 kubectl delete pod -n kube-system coredns-6f4fd4bdf-8q7zp
 ```
 
@@ -245,13 +245,13 @@ The following command is disruptive and may take several minutes depending on th
 
 :::
 
-```
+```bash
 kubectl delete pod -A --all
 ```
 
 Validate your pods and block size are correct by running the following commands:
 
-```
+```bash
 kubectl get pods --all-namespaces -o wide
 calicoctl ipam show --show-blocks
 ```
@@ -260,6 +260,6 @@ calicoctl ipam show --show-blocks
 
 Clean up the IP pools by deleting the temporary IP pool.
 
-```
+```bash
 kubectl delete pool temporary-pool
 ```
