--- a/calico-enterprise/operations/ebpf/install.mdx
+++ b/calico-enterprise/operations/ebpf/install.mdx
@@ -294,8 +294,8 @@ as shown below.
 For example:
 
 ```yaml
- This section includes base Calico Enterprise installation configuration.
- For more information, see: https://docs.tigera.io/calico-enterprise/latest/reference/installation/api/#operator.tigera.io/v1
+# This section includes base Calico Enterprise installation configuration.
+# For more information, see: https://docs.tigera.io/calico-enterprise/latest/reference/installation/api/#operator.tigera.io/v1
 apiVersion: operator.tigera.io/v1
 kind: Installation
 metadata:
@@ -308,7 +308,7 @@ spec:
    # EKS with Bottlerocket as node image only:
    # flexVolumePath: /var/lib/kubelet/plugins
 
-   Install Calico Enterprise
+  # Install Calico Enterprise
   variant: TigeraSecureEnterprise
 
    # ... remainder of the Installation resource varies by platform ...
