--- a/calico-enterprise_versioned_docs/version-3.14/networking/ipam/change-block-size.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/networking/ipam/change-block-size.mdx
@@ -179,7 +179,7 @@ temporary-pool        10.0.0.0/16      true   Always     false
 
 In our example, **coredns** is our only pod; for multiple pods you would trigger a deletion for all pods in the cluster.
 
-```
+```bash
 kubectl delete pod -n kube-system coredns-6f4fd4bdf-8q7zp
 ```
 
@@ -191,7 +191,7 @@ The following command is disruptive and may take several minutes depending on th
 
 :::
 
-```
+```bash
 kubectl delete pod -A --all
 ```
 
@@ -199,7 +199,7 @@ kubectl delete pod -A --all
 
 Now that you’ve verified that pods are getting IPs from the new range, you can safely delete the existing pool.
 
-```
+```bash
 kubectl delete ippool default-ipv4-ippool
 ```
 
@@ -221,13 +221,13 @@ spec:
 
 Apply the changes.
 
-```
+```bash
 kubectl apply -f pool.yaml
 ```
 
 ### Disable the temporary IP pool
 
-```
+```bash
 kubectl patch ippool temporary-pool -p '{"spec": {"disabled": "true"}}'
 ```
 
@@ -235,7 +235,7 @@ kubectl patch ippool temporary-pool -p '{"spec": {"disabled": "true"}}'
 
 In our example, **coredns** is our only pod; for multiple pods you would trigger a deletion for all pods in the cluster.
 
-```
+```bash
 kubectl delete pod -n kube-system coredns-6f4fd4bdf-8q7zp
 ```
 
@@ -247,13 +247,13 @@ The following command is disruptive and may take several minutes depending on th
 
 :::
 
-```
+```bash
 kubectl delete pod -A --all
 ```
 
 Validate your pods and block size are correct by running the following commands:
 
-```
+```bash
 kubectl get pods --all-namespaces -o wide
 calicoctl ipam show --show-blocks
 ```
@@ -262,6 +262,6 @@ calicoctl ipam show --show-blocks
 
 Clean up the IP pools by deleting the temporary IP pool.
 
-```
+```bash
 kubectl delete pool temporary-pool
 ```
