--- a/calico-enterprise_versioned_docs/version-3.14/operations/ebpf/install.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/operations/ebpf/install.mdx
@@ -337,8 +337,8 @@ including the `linuxDataplane` field. For EKS only, you should also add the `fle
 For example:
 
 ```yaml
- This section includes base Calico Enterprise installation configuration.
- For more information, see: https://docs.tigera.io/calico-enterprise/3.14/reference/installation/api/#operator.tigera.io/v1
+# This section includes base Calico Enterprise installation configuration.
+# For more information, see: https://docs.tigera.io/calico-enterprise/3.14/reference/installation/api/#operator.tigera.io/v1
 apiVersion: operator.tigera.io/v1
 kind: Installation
 metadata:
@@ -351,7 +351,7 @@ spec:
    # EKS with Bottlerocket as node image only:
    # flexVolumePath: /var/lib/kubelet/plugins
 
-   Install Calico Enterprise
+ #  Install Calico Enterprise
   variant: TigeraSecureEnterprise
 
    # ... remainder of the Installation resource varies by platform ...
