--- a/calico-enterprise_versioned_docs/version-3.15/operations/ebpf/install.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/operations/ebpf/install.mdx
@@ -294,8 +294,8 @@ as shown below.
 For example:
 
 ```yaml
- This section includes base Calico Enterprise installation configuration.
- For more information, see: https://docs.tigera.io/calico-enterprise/latest/reference/installation/api/#operator.tigera.io/v1
+# This section includes base Calico Enterprise installation configuration.
+# For more information, see: https://docs.tigera.io/calico-enterprise/latest/reference/installation/api/#operator.tigera.io/v1
 apiVersion: operator.tigera.io/v1
 kind: Installation
 metadata:
@@ -308,7 +308,7 @@ spec:
    # EKS with Bottlerocket as node image only:
    # flexVolumePath: /var/lib/kubelet/plugins
 
-   Install Calico Enterprise
+  # Install Calico Enterprise
   variant: TigeraSecureEnterprise
 
    # ... remainder of the Installation resource varies by platform ...
@@ -374,13 +374,13 @@ in its configuration. You will need to do `kops update cluster` to roll out the 
 
 In OpenShift, you can disable `kube-proxy` as follows:
 
-```
+```bash
 kubectl patch networks.operator.openshift.io cluster --type merge -p '{"spec":{"deployKubeProxy": false}}'
 ```
 
 If you need to re-enable it later:
 
-```
+```bash
 kubectl patch networks.operator.openshift.io cluster --type merge -p '{"spec":{"deployKubeProxy": true}}'
 ```
 
@@ -402,7 +402,7 @@ kubectl patch felixconfiguration.p default --type merge --patch='{"spec": {"bpfK
 In EKS, you can disable `kube-proxy`, reversibly, by adding a node selector that doesn't match and nodes to
 `kube-proxy`'s `DaemonSet`, for example:
 
-```
+```bash
 kubectl patch ds -n kube-system kube-proxy -p '{"spec":{"template":{"spec":{"nodeSelector":{"non-calico": "true"}}}}}'
 ```
 
