--- a/calico/getting-started/kubernetes/vpp/getting-started.mdx
+++ b/calico/getting-started/kubernetes/vpp/getting-started.mdx
@@ -291,12 +291,12 @@ For some hardware, the following hugepages configuration may enable VPP to use m
 Start by getting the appropriate yaml manifest for the VPP dataplane resources:
 
 ```bash
- If you have configured hugepages on your machines
+# If you have configured hugepages on your machines
 curl -o calico-vpp.yaml https://raw.githubusercontent.com/projectcalico/vpp-dataplane/{{vppbranch}}/yaml/generated/calico-vpp.yaml
 ```
 
 ```bash
- If not, or if you're unsure
+# If not, or if you're unsure
 curl -o calico-vpp.yaml https://raw.githubusercontent.com/projectcalico/vpp-dataplane/{{vppbranch}}/yaml/generated/calico-vpp-nohuge.yaml
 ```
 
