--- a/calico/network-policy/hosts/host-forwarded-traffic.mdx
+++ b/calico/network-policy/hosts/host-forwarded-traffic.mdx
@@ -123,7 +123,7 @@ Save this as allow-ssh-maintenace.yaml.
 
 Apply the policy to the cluster:
 
-```
+```bash
 calicoctl create -f allow-ssh-maintenance.yaml
 ```
 
@@ -147,7 +147,7 @@ Replace myhost with the node name {{prodname}} uses, and the expected IPs with t
 
 Apply the host endpoint to the cluster:
 
-```
+```bash
 calicoctl create -f hep.yaml
 ```
 
