--- a/calico_versioned_docs/version-3.25/getting-started/kubernetes/self-managed-onprem/onpremises.mdx
+++ b/calico_versioned_docs/version-3.25/getting-started/kubernetes/self-managed-onprem/onpremises.mdx
@@ -42,13 +42,13 @@ installed directly on the cluster as a Deployment, and is configured through one
 
 1. First, install the operator on your cluster.
 
-   ```
+   ```bash
    kubectl create -f {{manifestsUrl}}/manifests/tigera-operator.yaml
    ```
 
 1. Download the custom resources necessary to configure {{prodname}}
 
-   ```
+   ```bash
    curl {{manifestsUrl}}/manifests/custom-resources.yaml -O
    ```
 
@@ -56,7 +56,7 @@ installed directly on the cluster as a Deployment, and is configured through one
 
 1. Create the manifest in order to install {{prodname}}.
 
-   ```
+   ```bash
    kubectl create -f custom-resources.yaml
    ```
 
