--- a/calico_versioned_docs/version-3.25/networking/ipam/change-block-size.mdx
+++ b/calico_versioned_docs/version-3.25/networking/ipam/change-block-size.mdx
@@ -138,13 +138,13 @@ spec:
 
 Apply the changes.
 
-```
+```bash
 calicoctl apply -f temporary-pool.yaml
 ```
 
 Let’s verify the temporary IP pool.
 
-```
+```bash
 calicoctl get ippool -o wide
 ```
 
@@ -158,13 +158,13 @@ temporary-pool        10.0.0.0/16      true   Always     false
 
 Disable allocations in the default pool.
 
-```
+```bash
 calicoctl patch ippool default-ipv4-ippool -p '{"spec": {"disabled": true}}'
 ```
 
 Verify the changes.
 
-```
+```bash
 calicoctl get ippool -o wide
 ```
 
@@ -178,7 +178,7 @@ temporary-pool        10.0.0.0/16      true   Always     false
 
 In our example, **coredns** is our only pod; for multiple pods you would trigger a deletion for all pods in the cluster.
 
-```
+```bash
 kubectl delete pod -n kube-system coredns-6f4fd4bdf-8q7zp
 ```
 
@@ -190,7 +190,7 @@ The following command is disruptive and may take several minutes depending on th
 
 :::
 
-```
+```bash
 kubectl delete pod -A --all
 ```
 
@@ -198,7 +198,7 @@ kubectl delete pod -A --all
 
 Now that you’ve verified that pods are getting IPs from the new range, you can safely delete the existing pool.
 
-```
+```bash
 calicoctl delete ippool default-ipv4-ippool
 ```
 
@@ -220,13 +220,13 @@ spec:
 
 Apply the changes.
 
-```
+```bash
 calicoctl apply -f pool.yaml
 ```
 
 ### Disable the temporary IP pool
 
-```
+```bash
 calicoctl patch ippool temporary-pool -p '{"spec": {"disabled": true}}'
 ```
 
@@ -234,7 +234,7 @@ calicoctl patch ippool temporary-pool -p '{"spec": {"disabled": true}}'
 
 In our example, **coredns** is our only pod; for multiple pods you would trigger a deletion for all pods in the cluster.
 
-```
+```bash
 kubectl delete pod -n kube-system coredns-6f4fd4bdf-8q7zp
 ```
 
@@ -246,13 +246,13 @@ The following command is disruptive and may take several minutes depending on th
 
 :::
 
-```
+```bash
 kubectl delete pod -A --all
 ```
 
 Validate your pods and block size are correct by running the following commands:
 
-```
+```bash
 kubectl get pods --all-namespaces -o wide
 calicoctl ipam show --show-blocks
 ```
@@ -261,6 +261,6 @@ calicoctl ipam show --show-blocks
 
 Clean up the IP pools by deleting the temporary IP pool.
 
-```
+```bash
 calicoctl delete pool temporary-pool
 ```
