Fix path to latest

--- a/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.1-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.1-release-notes.mdx
@@ -1,14 +1,14 @@
-3 April 2023
+4 April 2023
 
 ### What's new in 3.16.1
 
 #### Application layer policy with Envoy
 
-{{prodname}} now includes support for application layer policy with Envoy, enabling platform operators to define authorization rules in {{prodname}} policies for protocols such as HTTP and gRPC. For more information, see [Application layer policies](network-policy/application-layer-policies/).
+{{prodname}} now includes support for application layer policy with Envoy, enabling platform operators to define authorization rules in {{prodname}} policies for protocols such as HTTP and gRPC. For more information, see [Application layer policies](../network-policy/application-layer-policies/).
 
 #### Policies for SELinux 
 
-{{prodname}} adds support for clusters that use SELinux as an additional layer of security for node operating systems. RPM packages are available to install on each node with policies that authorize the access required by {{prodname}} components. For more information, see [System requirements](getting-started/install-on-clusters/requirements).
+{{prodname}} adds support for clusters that use SELinux as an additional layer of security for node operating systems. RPM packages are available to install on each node with policies that authorize the access required by {{prodname}} components. For more information, see [System requirements](../getting-started/install-on-clusters/requirements).
 
 ### 3.16.0
 
