Add known issue to v3.16.1 release notes for ClusterInformations.

--- a/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.1-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.1-release-notes.mdx
@@ -50,4 +50,5 @@
 
 ### Known issues
 
-* Upgrading to {{prodname}} 3.16.0 on Rancher/RKE from {{prodname}} 3.13.0 currently requires manually terminating the calico-node container for an upgrade to proceed.
+- The ClusterInformations resource is showing the wrong versions for `calicoVersion` and `cnxVersion`. This will be addressed the next patch.
+- Upgrading to {{prodname}} 3.16.0 on Rancher/RKE from {{prodname}} 3.13.0 currently requires manually terminating the calico-node container for an upgrade to proceed.
