--- a/calico-enterprise/reference/resources/globalalert.mdx
+++ b/calico-enterprise/reference/resources/globalalert.mdx
@@ -31,11 +31,11 @@ metadata:
   name: sample
 spec:
   summary: 'Sample'
-  description: 'Sample ${client_namespace}/${client_name_aggr}'
+  description: 'Sample ${source_namespace}/${source_name_aggr}'
   severity: 100
   dataSet: flows
   query: action=allow
-  aggregateBy: [client_namespace, client_name_aggr]
+  aggregateBy: [source_namespace, source_name_aggr]
   field: num_flows
   metric: sum
   condition: gt
