Fix in CE 14 RN

--- a/calico-enterprise_versioned_docs/version-3.14/_includes/release-notes/_v3.14.0-4-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/_includes/release-notes/_v3.14.0-4-release-notes.mdx
@@ -6,7 +6,7 @@
 
 {{prodname}} now includes the Early Preview designation for minor releases. Early Preview releases (denoted by a .0 patch version, e.g. 3.14.0) enable our customers to validate and test new versions of {{prodname}} in test and staging environments before they go GA.
 
-### Support for Calico support on Rancher RKE2
+### Support for Rancher RKE2
 
 New and existing users of Rancher can install {{prodname}} on RKE2, Rancher's next generation Kubernetes Distribution. [Link to documentation](../../getting-started/install-on-clusters/rke2.mdx)
 
