Calico CNI support for EKS and AKS

--- a/calico-enterprise/compliance/encrypt-cluster-pod-traffic.mdx
+++ b/calico-enterprise/compliance/encrypt-cluster-pod-traffic.mdx
@@ -42,13 +42,11 @@ This how-to guide uses the following {{prodname}} features:
 **Limitations**
 
 - IPv4 only
-- EKS, only with AWS CNI
-- AKS, only with Azure CNI
 
 **Supported encryption**
 
 - Pod-to-pod traffic
-- Encryption for direct node-to-node communication is only supported on managed clusters deployed on EKS (AWS CNI) and AKS (Azure CNI)
+- Encryption for direct node-to-node communication is supported on managed clusters deployed on EKS (AWS CNI and Calico CNI) and AKS (Azure CNI and Calico CNI)
 
 **Required**
 
